# game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ikhanchoi.h
app/: CMakeLists.txt  main.cpp
assets/shaders/: pbr.frag  pbr.vert  simple.vert
core/: CMakeLists.txt
core/containers/: tree.h
core/context/: context.cpp  context.h  context.inl
core/event/: event_base.h  event_dispatcher.h
core/execution/: command_base.h  scheduler.h  task.h
core/execution/command/: command.h  command_buffer.h  undoable_command.h
core/execution/commands/: command.h  command_base.h  command_buffer.h  undoable_command.h
core/execution/events/: event_dispatcher.h
core/import/: gltf_loader.h
core/managers/: manager_base.h  pool_manager_base.cpp  pool_manager_base.h  pool_manager_base.inl
core/memory/: handle.h  object.h  storage.h
core/memory/allocators/: allocation_policies.h  allocator.h  allocator_concept.h  freelist_allocator.h  freelist_allocator.inl  naive_allocator.h  pool_allocator.h  pool_allocator.inl
core/objects/: object_base.h
core/platform/: gpu_handle.h
core/utils/: pool.h  pool.inl  visitor.h
editor/: CMakeLists.txt  editor.cpp  editor.h
editor/objects/panels/: asset_panel.cpp  asset_panel.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  main_view_panel.cpp  main_view_panel.h  panel.cpp  panel.h
editor/objects/windows/: window.cpp  window.h
editor/systems/ui/: ui.cpp  ui.h
editor/systems/undo-redo/: undo-redo.h
editor/ui/: CMakeLists.txt  ui_system.cpp  ui_system.h
editor/ui/panel/hierarchy/: hierarchy_panel.cpp  hierarchy_panel.h
editor/ui/panel/inspector/: inspector_panel.cpp  inspector_panel.h
game/: CMakeLists.txt  manager_base.h  system_base.h  world.cpp  world.h  world.inl
game/objects/: CMakeLists.txt
game/objects/entity/: CMakeLists.txt  entity.h  entity_base.h  entity_manager.cpp  entity_manager.h
game/objects/resources/: CMakeLists.txt
game/objects/scene/: CMakeLists.txt  persistent_scene.h  scene.h  scene_base.h  scene_events.h  scene_manager.cpp  scene_manager.h
game/systems/: CMakeLists.txt
include/: pch.h
include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/imgui/.github/ISSUE_TEMPLATE/: issue_template.yml
include/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_android.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  imgui_impl_win32.cpp
include/imgui/docs/: FAQ.md  README.md
include/imgui/examples/example_allegro5/: main.cpp
include/imgui/examples/example_android_opengl3/: main.cpp
include/imgui/examples/example_apple_metal/: main.mm
include/imgui/examples/example_apple_opengl2/: main.mm
include/imgui/examples/example_glfw_metal/: main.mm
include/tiny_gltf/: stb_image.h
main/: CMakeLists.txt  main.cpp
modules/: component.cpp  component.h  core.cpp  core.h  core.inl  entity.cpp  entity.h  event.cpp  event.h  resource.cpp  resource.h  window.cpp  window.h
runtime/: CMakeLists.txt
runtime/render/: CMakeLists.txt  render_system.cpp  render_system.h
runtime/render/material/: material_instance.h  material_resource.h
runtime/render/mesh_render/: CMakeLists.txt  mesh_component.h  mesh_instance.h  mesh_render_system.cpp  mesh_render_system.h  mesh_resource.h
runtime/render/renderer/mesh/: mesh_component.h
src/: main.cpp
systems/: render.cpp  render.h
world/: CMakeLists.txt  manager_base.h  system_base.h  world.cpp  world.h  world.inl
world/component/: CMakeLists.txt  component_base.h  component_manager.cpp  component_manager.h
world/component/transform/: transform_component.h  transform_system.cpp  transform_system.h
world/entity/: CMakeLists.txt  entity.h  entity_manager.cpp  entity_manager.h
world/resource/: CMakeLists.txt  buffer_resource.h  material_resource.h  model_resource.h  resource.cpp  resource.h  resource_base.h  resource_manager.cpp  resource_manager.h  texture_resource.h
world/scene/: CMakeLists.txt  scene.h  scene_base.h  scene_events.h  scene_manager.cpp  scene_manager.h
(+34 files in other folders)
